# CLarity

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  clarity.cc
demo/: CMakeLists.txt
demo/include/: qt_util.h  range_viewer.h  terrain_viewer.h
demo/src/: main.cc  qt_util.cc  range_viewer.cc  terrain_viewer.cc
include/: buffer.h  camera.h  cl_range_calculator.h  cl_utils.h  clarity_config.h  clarity_config.h.in  cpu_range_calculator.h  device_buffer.h  diamond_square_terrain_generator.h  range_calculator.h  terrain.h  terrain_generator.h
src/: buffer.cc  camera.cc  cl_range_calculator.cc  cl_utils.cc  cpu_range_calculator.cc  device_buffer.cc  diamond_square_terrain_generator.cc  terrain.cc
src/kernels/: cam_2_world_coords.cl  map_range.cl  pix_2_cam_coords.cl  simple_kernel.cl
test/: CMakeLists.txt  test_camera.cc  test_cl_range_calculator.cc  test_cl_utils.cc  test_cpu_range_calculator.cc  test_device_buffer.cc  test_terrain.cc
